@@ -7,7 +7,6 @@ find_package (Kadu REQUIRED CONFIG)
 set (LIBGADU_MIN_VERSION "1.12.1")
 
 kadu_api_directories (plugins/gadu_protocol
-	actions
 	file-transfers
 	gui/widgets
 	gui/windows
@@ -23,9 +22,6 @@ kadu_api_directories (plugins/gadu_protocol
 )
 
 set (SOURCES
-	actions/gadu-protocol-menu-manager.cpp
-	actions/gadu-send-gift-action.cpp
-
 	file-transfer/gadu-outgoing-file-transfer-handler.cpp
 	file-transfer/gadu-url-incoming-file-transfer-handler.cpp
 
