@@ -1,56 +1,0 @@
-/*
- * %kadu copyright begin%
- * Copyright 2015 Rafał Przemysław Malinowski (rafal.przemyslaw.malinowski@gmail.com)
- * %kadu copyright end%
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of
- * the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
- */
-
-#pragma once
-
-#include "protocols/protocol-menu-manager.h"
-
-#include <QtCore/QList>
-#include <QtCore/QObject>
-#include <QtCore/QPointer>
-#include <injeqt/injeqt.h>
-#include <memory>
-
-class Actions;
-class InjectedFactory;
-
-class GaduProtocolMenuManager : public QObject, public ProtocolMenuManager
-{
-	Q_OBJECT
-
-public:
-	Q_INVOKABLE explicit GaduProtocolMenuManager(QObject *parent = nullptr);
-	virtual ~GaduProtocolMenuManager();
-
-	virtual const QList<ActionDescription *> & protocolActions() const override;
-	virtual const QString protocolName() const override;
-
-private:
-	QPointer<Actions> m_actions;
-	QPointer<InjectedFactory> m_injectedFactory;
-
-	QList<ActionDescription *> m_actionDescriptions;
-	std::unique_ptr<ActionDescription> m_sendGiftAction;
-
-private slots:
-	INJEQT_SET void setActions(Actions *actions);
-	INJEQT_SET void setInjectedFactory(InjectedFactory *injectedFactory);
-	INJEQT_INIT void init();
-
-};
