@@ -19,7 +19,6 @@
 
 #include "gadu-module.h"
 
-#include "actions/gadu-protocol-menu-manager.h"
 #include "server/gadu-servers-manager.h"
 #include "helpers/gadu-list-helper.h"
 #include "gadu-plugin-object.h"
@@ -32,7 +31,6 @@ GaduModule::GaduModule()
 	add_type<GaduListHelper>();
 	add_type<GaduPluginObject>();
 	add_type<GaduProtocolFactory>();
-	add_type<GaduProtocolMenuManager>();
 	add_type<GaduServersManager>();
 	add_type<GaduUrlDomVisitorProvider>();
 	add_type<GaduUrlHandler>();
