@@ -27,10 +27,8 @@
 class AccountManager;
 class DomProcessorService;
 class GaduProtocolFactory;
-class GaduProtocolMenuManager;
 class GaduUrlDomVisitorProvider;
 class GaduUrlHandler;
-class MenuInventory;
 class ProtocolsManager;
 class UrlHandlerManager;
 
@@ -47,10 +45,8 @@ private:
 	QPointer<AccountManager> m_accountManager;
 	QPointer<DomProcessorService> m_domProcessorService;
 	QPointer<GaduProtocolFactory> m_gaduProtocolFactory;
-	QPointer<GaduProtocolMenuManager> m_gaduProtocolMenuManager;
 	QPointer<GaduUrlDomVisitorProvider> m_gaduUrlDomVisitorProvider;
 	QPointer<GaduUrlHandler> m_gaduUrlHandler;
-	QPointer<MenuInventory> m_menuInventory;
 	QPointer<ProtocolsManager> m_protocolsManager;
 	QPointer<UrlHandlerManager> m_urlHandlerManager;
 
@@ -60,10 +56,8 @@ private slots:
 	INJEQT_SET void setAccountManager(AccountManager *accountManager);
 	INJEQT_SET void setDomProcessorService(DomProcessorService *domProcessorService);
 	INJEQT_SET void setGaduProtocolFactory(GaduProtocolFactory *gaduProtocolFactory);
-	INJEQT_SET void setGaduProtocolMenuManager(GaduProtocolMenuManager *gaduProtocolMenuManager);
 	INJEQT_SET void setGaduUrlDomVisitorProvider(GaduUrlDomVisitorProvider *gaduUrlDomVisitorProvider);
 	INJEQT_SET void setGaduUrlHandler(GaduUrlHandler *gaduUrlHandler);
-	INJEQT_SET void setMenuInventory(MenuInventory *menuInventory);
 	INJEQT_SET void setProtocolsManager(ProtocolsManager *protocolsManager);
 	INJEQT_SET void setUrlHandlerManager(UrlHandlerManager *urlHandlerManager);
 
